--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rubickanov - Home</title>
+    <title>Rubickanov - Contact</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,8 +18,8 @@
     </nav>
 </header>
 <main>
-    <h1>Welcome to Rubickanov's Website</h1>
-    <p>This is the home page of Rubickanov's personal website. Stay tuned for more updates!</p>
+    <h1>Contact Rubickanov</h1>
+    <p>For any inquiries, please email me at rubickanov@example.com</p>
 </main>
 <footer>
     <p>© 2024 Rubickanov</p>
