html extenstion remove attempt

--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 <header>
     <nav>
         <ul>
-            <li><a id="home" href="index.html">Home</a></li>
-            <li><a id="about" href="about.html">About</a></li>
-            <li><a id="projects" href="projects.html">Projects</a></li>
-            <li><a id="contact" href="contact.html">Contact</a></li>
+            <li><a id="home" href="index">Home</a></li>
+            <li><a id="about" href="about">About</a></li>
+            <li><a id="projects" href="projects">Projects</a></li>
+            <li><a id="contact" href="contact">Contact</a></li>
         </ul>
     </nav>
 </header>
