--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <header>
     <nav>
         <ul>
-            <li><a id="home" href="">Home</a></li>
+            <li><a id="home" href="/">Home</a></li>
             <li><a id="about" href="about">About</a></li>
             <li><a id="projects" href="projects">Projects</a></li>
             <li><a id="contact" href="contact">Contact</a></li>
