Added icon and reworked home page

--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rubickanov - Contact</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="assets/icon.ico">
 </head>
 <body>
 <header>
     <nav>
         <ul>
-            <li><a id="home" href="/">Home</a></li>
-            <li><a id="about" href="/about">About</a></li>
-            <li><a id="projects" href="/projects">Projects</a></li>
-            <li><a id="contact" href="/contact">Contact</a></li>
+            <li><a id="home" href="index.html">Home</a></li>
+            <li><a id="about" href="about.html">About</a></li>
+            <li><a id="projects" href="projects.html">Projects</a></li>
+            <li><a id="contact" href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -22,8 +23,18 @@
     <p>For any inquiries, please email me at rubickanov@example.com</p>
 </main>
 <footer>
-    <p>© 2024 Rubickanov</p>
+    <p class="copyright">Rubickanov © 2024 </p>
 </footer>
 <script src="script.js"></script>
 </body>
 </html>
+
+
+<!--    <ul>
+            <li><a id="home" href="/">Home</a></li>
+            <li><a id="about" href="/about">About</a></li>
+            <li><a id="projects" href="/projects">Projects</a></li>
+            <li><a id="contact" href="/contact">Contact</a></li>
+        </ul>
+
+>
