--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
         </ul>
     </nav>
 </header>
-<main>
-    <h1>Welcome to Rubickanov's Website</h1>
-    <p>This is the home page of Rubickanov's personal website. Stay tuned for more updates!</p>
-</main>
+<div class="subheader">
+</div>
 <footer>
     <p class="copyright">Rubickanov © 2024 </p>
 </footer>
