--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rubickanov - Projects</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="assets/icon.ico">
+    <link rel="icon" type="image/x-icon" href="img/icon.ico">
 </head>
 <body>
 <header>
