--- a/about.html
+++ b/about.html
@@ -3,38 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rubickanov - About</title>
+    <title>About Me - Rubickanov</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="img/icon.ico">
 </head>
 <body>
+<div class="wrapper">
 <header>
+    <div class="logo">
+        <a href="index.html">
+            <img src="img/RUBICKANOV.png" alt="Rubickanov Logo" width="330" height="132">
+        </a>
+    </div>
     <nav>
         <ul>
-            <li><a id="home" href="index.html">Home</a></li>
-            <li><a id="about" href="about.html">About</a></li>
-            <li><a id="projects" href="projects.html">Projects</a></li>
-            <li><a id="contact" href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 <main>
-    <h1>About Rubickanov</h1>
-    <p>Rubickanov is a software developer with a passion for coding. More details coming soon!</p>
+    <section id="about" class="section">
+        <h1>About Me</h1>
+        <p>Welcome to my personal website! My name is Rubickanov, and I am passionate about web development and creative projects. Here you will find information about my work and how to get in touch with me.</p>
+    </section>
 </main>
+
+
 <footer>
-    <p class="copyright">Rubickanov © 2024 </p>
+    <p>&copy; 2024 Rubickanov. All rights reserved.</p>
 </footer>
-<script src="script.js"></script>
+</div>
+<script src="scripts.js"></script>
 </body>
 </html>
-
-
-<!--    <ul>
-            <li><a id="home" href="/">Home</a></li>
-            <li><a id="about" href="/about">About</a></li>
-            <li><a id="projects" href="/projects">Projects</a></li>
-            <li><a id="contact" href="/contact">Contact</a></li>
-        </ul>
-
->
