--- a/contact.html
+++ b/contact.html
@@ -3,38 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rubickanov - Contact</title>
+    <title>Contact - Rubickanov</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="img/icon.ico">
 </head>
 <body>
+<div class="wrapper">
 <header>
+    <div class="logo">
+        <a href="index.html">
+            <img src="img/RUBICKANOV.png" alt="Rubickanov Logo" width="330" height="132">
+        </a>
+    </div>
     <nav>
         <ul>
-            <li><a id="home" href="index.html">Home</a></li>
-            <li><a id="about" href="about.html">About</a></li>
-            <li><a id="projects" href="projects.html">Projects</a></li>
-            <li><a id="contact" href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 <main>
-    <h1>Contact Rubickanov</h1>
-    <p>For any inquiries, please email me at rubickanov@example.com</p>
+<section id="contact" class="section">
+    <h1>Contact</h1>
+    <p>You can reach me via the following methods:</p>
+    <ul>
+        <li>Email: rubickanov@example.com</li>
+        <li>Phone: +123 456 7890</li>
+        <li>LinkedIn: <a href="#">linkedin.com/in/rubickanov</a></li>
+        <li>GitHub: <a href="#">github.com/rubickanov</a></li>
+    </ul>
+</section>
 </main>
 <footer>
-    <p class="copyright">Rubickanov © 2024 </p>
+    <p>&copy; 2024 Rubickanov. All rights reserved.</p>
 </footer>
-<script src="script.js"></script>
+</div>
+<script src="scripts.js"></script>
 </body>
 </html>
-
-
-<!--    <ul>
-            <li><a id="home" href="/">Home</a></li>
-            <li><a id="about" href="/about">About</a></li>
-            <li><a id="projects" href="/projects">Projects</a></li>
-            <li><a id="contact" href="/contact">Contact</a></li>
-        </ul>
-
->
