--- a/index.html
+++ b/index.html
@@ -3,40 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rubickanov - Home</title>
+    <title>Rubickanov's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="img/icon.ico">
 </head>
 <body>
-<header>
-    <h1 class="logo">RUBICKANOV</h1>
-    <nav>
-        <ul>
-            <li><a id="home" href="index.html">Home</a></li>
-            <li><a id="about" href="about.html">About</a></li>
-            <li><a id="projects" href="projects.html">Projects</a></li>
-            <li><a id="contact" href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <div class="slideshow"></div>
-</main>
+<div class="wrapper">
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="img/RUBICKANOV.png" alt="Rubickanov Logo" width="330" height="132">
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section id="home" class="section">
+            <h1>Welcome to Rubickanov's Portfolio</h1>
+            <p>This is the home page of my personal website where you can learn more about me and my work.</p>
+        </section>
+    </main>
 
-
-<footer>
-    <p class="copyright">Rubickanov © 2024 </p>
-</footer>
-<script src="script.js"></script>
+    <footer>
+        <p>&copy; 2024 Rubickanov. All rights reserved.</p>
+    </footer>
+</div>
+<script src="scripts.js"></script>
 </body>
 </html>
-
-<!--    <ul>
-            <li><a id="home" href="/">Home</a></li>
-            <li><a id="about" href="/about">About</a></li>
-            <li><a id="projects" href="/projects">Projects</a></li>
-            <li><a id="contact" href="/contact">Contact</a></li>
-        </ul>
-
->
