--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 <header>
     <div class="logo">
         <a href="index.html">
-            <img src="img/RUBICKANOV.png" alt="Rubickanov Logo" width="330" height="132">
+            <img src="img/RUBICKANOV_White.png" alt="Rubickanov Logo" width="330" height="132">
         </a>
     </div>
     <nav>
