--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <header>
     <div class="logo">
         <a href="index.html">
-            <img src="img/RUBICKANOV_White.png" alt="Rubickanov Logo" width="330" height="132">
+            <img src="img/RUBICKANOV_Green.png" alt="Rubickanov Logo" width="330" height="132">
         </a>
     </div>
     <nav>
@@ -20,7 +20,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT ME</a></li>
             <li><a href="projects.html">PROJECTS</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a class = "selected" href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
 </header>
