--- a/projects.html
+++ b/projects.html
@@ -12,14 +12,14 @@
 <header>
     <div class="logo">
         <a href="index.html">
-            <img src="img/RUBICKANOV_White.png" alt="Rubickanov Logo" width="330" height="132">
+            <img src="img/RUBICKANOV_Green.png" alt="Rubickanov Logo" width="330" height="132">
         </a>
     </div>
     <nav>
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT ME</a></li>
-            <li><a href="projects.html">PROJECTS</a></li>
+            <li><a class = "selected" href="projects.html">PROJECTS</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
