Changed projects page

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
         <div class="project">
             <h2>Project Title 1</h2>
             <img src="path/to/your/image.jpg" alt="Project Image">
-            <p>Project description goes here. Describe your project, its features, and technologies used.</p>
+            <p>Project description goes here.</p>
             <a href="#" class="project-link">View Project</a>
         </div>
         <!-- Example Project with YouTube Video -->
@@ -41,7 +41,7 @@
             <div class="video-container">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <p>Project description goes here. Describe your project, its features, and technologies used.</p>
+            <p>Project description goes here.</p>
             <a href="#" class="project-link">View Project</a>
         </div>
         <!-- Add more projects as needed -->
