Updated PROJECTS page and redesigned header and footer

--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Rubickanov</title>
+    <title>Rubickanov - ABOUT ME</title>
+    <link rel="icon" href="img/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -27,7 +28,7 @@
 <main>
     <section id="about" class="section">
         <h1>About Me</h1>
-        <p>Welcome to my personal website! My name is Rubickanov, and I am passionate about web development and creative projects. Here you will find information about my work and how to get in touch with me.</p>
+        <p>Coming soon...</p>
     </section>
 </main>
 
