--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Rubickanov</title>
+    <title>Rubickanov - CONTACT</title>
+    <link rel="icon" href="img/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -29,10 +30,10 @@
     <h1>Contact</h1>
     <p>You can reach me via the following methods:</p>
     <ul>
-        <li>Email: rubickanov@example.com</li>
-        <li>Phone: +123 456 7890</li>
-        <li>LinkedIn: <a href="#">linkedin.com/in/rubickanov</a></li>
-        <li>GitHub: <a href="#">github.com/rubickanov</a></li>
+        <li>Email: rubickanov@gmail.com</li>
+        <li>GitHub: <a href="https://github.com/rubickanov" target="_blank">github.com/rubickanov</a></li>
+        <li>Itch.io: <a href="https://rubickanov.itch.io/" target="_blank">rubickanov.itch.io/</a></li>
+        <li>X/Twitter: <a href="https://x.com/rubickanov" target="_blank">@rubickanov</a></li>
     </ul>
 </section>
 </main>
