Attemt to fix youtube player #2

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
             <h2>Time Hunters</h2>
             <img src="img/TH.png" alt="Project Image">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/UPY54dzgPIk" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/UPY54dzgPIk" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <p> It's my first game project that was fun to play. It's 3D top-down shooter for 2 player. We didn't know much about multiplayer programming so this game has only local coop for 2 players. This game was developed during ZEMJAM 2023 in just one and a half days.</p>
             <p> I was responsible for programming and design of shooter mechanics. I really enjoyed making shooter game and one of my goals make TimeHunters 2 which will be much bigger game with multiplayer</p>
@@ -49,7 +49,7 @@
             <h2>Beyond the Breach</h2>
             <img src="img/btb.png" alt="Project Image">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xlEXvXjToRw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/xlEXvXjToRw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <p>Beyond the Breach is a single player 3D puzzle game that tells story of a deviant robot trying to escape free.</p>
             <p>My first game on Steam. We were making this game for 3 month and decided to release it on Steam to learn how to work with Steamworks.SDK and how to work with community.  It was a great experiment, and I'm so happy we did that.</p>
@@ -60,7 +60,7 @@
             <h2>Fool of Pranks</h2>
             <img src="img/FOP.png" alt="Project Image">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xGJITLfdgAA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/xGJITLfdgAA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <p>Fool of Prank is a top-down 3D PvP game, where you prank other players using items around you.</p>
             <p>I'm so proud of this project. We made it in just 2 days for Global Game Jam 2024, and we really enjoyed this result.</p>
