Added dropdown for description

--- a/projects.html
+++ b/projects.html
@@ -27,53 +27,81 @@
 </header>
 <main>
 <section id="projects" class="section">
+    <p>Press Arrow to see description</p>
     <div class="projects-list">
         <div class="project">
-            <h2>Time Hunters</h2>
+
             <img src="img/TH.png" alt="Project Image">
             <div>
                 <iframe width="330" height="165" src="https://www.youtube.com/embed/UPY54dzgPIk" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <p> It's my first game project that was fun to play. It's 3D top-down shooter for 2 player. We didn't know much about multiplayer programming so this game has only local coop for 2 players. This game was developed during ZEMJAM 2023 in just one and a half days.</p>
-            <p> I was responsible for programming and design of shooter mechanics. I really enjoyed making shooter game and one of my goals make TimeHunters 2 which will be much bigger game with multiplayer</p>
-            <a href="https://rubickanov.itch.io/time-hunters" target="_blank">View Time Hunters on Itch</a>
+            <div class="dropdown-content">
+                <h2>Time Hunters</h2>
+                <p> It's my first game project that was fun to play. It's 3D top-down shooter for 2 player. We didn't know much about multiplayer programming so this game has only local coop for 2 players. This game was developed during ZEMJAM 2023 in just one and a half days.</p>
+                <p> I was responsible for programming and design of shooter mechanics. I really enjoyed making shooter game and one of my goals make TimeHunters 2 which will be much bigger game with multiplayer</p>
+                <a href="https://rubickanov.itch.io/time-hunters" target="_blank">View Time Hunters on Itch</a>
+            </div>
+            <button class="dropdown-button">
+                <img src="img/down.png" alt="Open/Close" class="dropdown-image">
+            </button>
+
         </div>
         <div class="project">
-            <h2>Remind</h2>
             <img src="img/remind_logo.png" alt="Project Image">
-            <p>Simple 2D puzzle game that tells story about 30-years-old woman who tries to get by as a housewife diagnosed with Alzheimer's disease.</p>
-            <p>I was the only programmer in the team and I also participated in making the whole design of the game. This game is quite small, but I added it because of visual style that I'm proud of.</p>
-            <a href="https://rubickanov.itch.io/remind" target="_blank" class="">View Remind on Itch</a>
+            <div class="dropdown-content">
+                <h2>Remind</h2>
+                <p>Simple 2D puzzle game that tells story about 30-years-old woman who tries to get by as a housewife diagnosed with Alzheimer's disease.</p>
+                <p>I was the only programmer in the team and I also participated in making the whole design of the game. This game is quite small, but I added it because of visual style that I'm proud of.</p>
+                <a href="https://rubickanov.itch.io/remind" target="_blank" class="">View Remind on Itch</a>
+            </div>
+            <button class="dropdown-button">
+                <img src="img/down.png" alt="Open/Close" class="dropdown-image">
+            </button>
         </div>
         <div class="project">
-            <h2>Beyond the Breach</h2>
             <img src="img/btb.png" alt="Project Image">
             <div>
                 <iframe width="330" height="165" src="https://www.youtube.com/embed/xlEXvXjToRw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <p>Beyond the Breach is a single player 3D puzzle game that tells story of a deviant robot trying to escape free.</p>
-            <p>My first game on Steam. We were making this game for 3 month and decided to release it on Steam to learn how to work with Steamworks.SDK and how to work with community.  It was a great experiment, and I'm so happy we did that.</p>
-            <p>I was responsible for all gameplay mechanics, save system and checkpoint system.</p>
-            <a href="https://store.steampowered.com/app/2752930/Beyond_the_Breach/" target="_blank">View Beyond the Breach on Steam</a>
+            <div class="dropdown-content">
+                <h2>Beyond the Breach</h2>
+                <p>Beyond the Breach is a single player 3D puzzle game that tells story of a deviant robot trying to escape free.</p>
+                <p>My first game on Steam. We were making this game for 3 month and decided to release it on Steam to learn how to work with Steamworks.SDK and how to work with community.  It was a great experiment, and I'm so happy we did that.</p>
+                <p>I was responsible for all gameplay mechanics, save system and checkpoint system.</p>
+                <a href="https://store.steampowered.com/app/2752930/Beyond_the_Breach/" target="_blank">View Beyond the Breach on Steam</a>
+            </div>
+            <button class="dropdown-button">
+                <img src="img/down.png" alt="Open/Close" class="dropdown-image">
+            </button>
         </div>
         <div class="project">
-            <h2>Fool of Pranks</h2>
             <img src="img/FOP.png" alt="Project Image">
             <div>
                 <iframe width="330" height="165" src="https://www.youtube.com/embed/xGJITLfdgAA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <p>Fool of Prank is a top-down 3D PvP game, where you prank other players using items around you.</p>
-            <p>I'm so proud of this project. We made it in just 2 days for Global Game Jam 2024, and we really enjoyed this result.</p>
-            <p>I was responsible for all gameplay mechanics. Assets were bought in Unity Asset Store.</p>
-            <a href="https://vincedelgado.itch.io/fool-of-pranks" target="_blank">View Fool of Pranks on Itch</a>
+            <div class="dropdown-content">
+                <h2>Fool of Pranks</h2>
+                <p>Fool of Prank is a top-down 3D PvP game, where you prank other players using items around you.</p>
+                <p>I'm so proud of this project. We made it in just 2 days for Global Game Jam 2024, and we really enjoyed this result.</p>
+                <p>I was responsible for all gameplay mechanics. Assets were bought in Unity Asset Store.</p>
+                <a href="https://vincedelgado.itch.io/fool-of-pranks" target="_blank">View Fool of Pranks on Itch</a>
+            </div>
+            <button class="dropdown-button">
+                <img src="img/down.png" alt="Open/Close" class="dropdown-image">
+            </button>
         </div>
         <div class="project">
-            <h2>Rubi Logger</h2>
             <img src="img/rubi_logger.png" alt="Project Image">
-            <p>Rubi Logger is an asset for Unity Asset Store that I hope can help Unity developers with their log system. Rubi Logger provides more flexible and clean logging for Unity projects of any scale. It also supports On-Screen and In-File logging.</p>
-            <p>It started as a tool for my future projects, but I decided to make a Unity Asset to share it with others.</p>
-            <p>When I first released it price was 7$, but then I made it free because this was no demand. :( </p>
-            <a href="https://assetstore.unity.com/packages/tools/utilities/rubi-logger-279955" target="_blank">View RubiLogger on Unity Asset Store</a>
+            <div class = "dropdown-content">
+                <h2>Rubi Logger</h2>
+                <p>Rubi Logger is an asset for Unity Asset Store that I hope can help Unity developers with their log system. Rubi Logger provides more flexible and clean logging for Unity projects of any scale. It also supports On-Screen and In-File logging.</p>
+                <p>It started as a tool for my future projects, but I decided to make a Unity Asset to share it with others.</p>
+                <p>When I first released it price was 7$, but then I made it free because this was no demand. :( </p>
+                <a href="https://assetstore.unity.com/packages/tools/utilities/rubi-logger-279955" target="_blank">View RubiLogger on Unity Asset Store</a>
+            </div>
+            <button class="dropdown-button">
+                <img src="img/down.png" alt="Open/Close" class="dropdown-image">
+            </button>
         </div>
     </div>
 </section>
