--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a class = "selected" href="about.html">ABOUT ME</a></li>
-            <li><a href="projects.html">PROJECTS</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="/index">HOME</a></li>
+            <li><a class = "selected" href="/about">ABOUT ME</a></li>
+            <li><a href="/projects">PROJECTS</a></li>
+            <li><a href="/contact">CONTACT</a></li>
         </ul>
     </nav>
 </header>
