--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="wrapper">
     <header>
         <div class="logo">
-            <a href="index.html">
+            <a href="/index">
                 <img src="img/RUBICKANOV_Green.png" alt="Rubickanov Logo" width="330" height="132">
             </a>
         </div>
