--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 </section>
 </main>
 <footer>
-    <p>&copy; 2024 Rubickanov. All rights reserved.</p>
+    <p>2024 Rubickanov™</p>
 </footer>
 </div>
 <script src="script.js"></script>
