--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
 </section>
 </main>
 <footer>
-    <p>&copy; 2024 Rubickanov. All rights reserved.</p>
+    <p>&copy; 2024 Rubickanov™ </p>
 </footer>
 </div>
 <script src="script.js"></script>
