--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
 
 <footer>
-    <p>&copy; 2024 Rubickanov. All rights reserved.</p>
+    <p>&copy; 2024 Rubickanov™ </p>
 </footer>
 </div>
 <script src="script.js"></script>
