--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Rubickanov. All rights reserved.</p>
+        <p>&copy; 2024 Rubickanov™ </p>
     </footer>
 </div>
 <script src="script.js"></script>
