--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
                 <h2>Rubi Logger</h2>
                 <p>Rubi Logger is an asset for Unity Asset Store that I hope can help Unity developers with their log system. Rubi Logger provides more flexible and clean logging for Unity projects of any scale. It also supports On-Screen and In-File logging.</p>
                 <p>It started as a tool for my future projects, but I decided to make a Unity Asset to share it with others.</p>
-                <p>When I first released it price was 7$, but then I made it free because this was no demand. :( </p>
+                <p>When I first released it price was 7$, but then I made it free because there was no demand. :( </p>
                 <a class="view" href="https://assetstore.unity.com/packages/tools/utilities/rubi-logger-279955" target="_blank">View RubiLogger on Unity Asset Store</a>
             </div>
             <button class="dropdown-button">
