--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                 <h2>Remind</h2>
                 <p>Simple 2D puzzle game that tells story about 30-years-old woman who tries to get by as a housewife diagnosed with Alzheimer's disease.</p>
                 <p>I was the only programmer in the team and I also participated in making the whole design of the game. This game is quite small, but I added it because of visual style that I'm proud of.</p>
-                <a class="view" href="https://rubickanov.itch.io/remind" target="_blank" class="">View Remind on Itch</a>
+                <a class="view" href="https://rubickanov.itch.io/remind" target="_blank">View Remind on Itch</a>
             </div>
             <button class="dropdown-button">
                 <img src="img/down.png" alt="Open/Close" class="dropdown-image">
@@ -80,8 +80,8 @@
 
             <div class="dropdown-content">
                 <h2>Fool of Pranks</h2>
-                <p>Fool of Prank is a top-down 3D PvP game, where you prank other players using items around you.</p>
-                <p>I'm so proud of this project. We made it in just 2 days for Global Game Jam 2024, and we really enjoyed this result.</p>
+                <p>Fool of Pranks is a top-down 3D PvP game, where you prank other players using items around you.</p>
+                <p>I'm so proud of this project. We made it in just 2 days for Global Game Jam 2024, and we really enjoyed the process and result.</p>
                 <p>I was responsible for all gameplay mechanics. Assets were bought in Unity Asset Store.</p>
                 <div class = "video-container">
                     <iframe width="330" height="165" src="https://www.youtube.com/embed/xGJITLfdgAA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
